# lam

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon
.github/workflows/: blank.yml  rust.yml
examples/: countdown.lam  factorial.lam  map_n_compose.lam  minisort.lam  quicksort.lam  sum.lam
src/: error.rs  intrinsics.rs  lib.rs  main.rs  main.zig  parser.rs  parser.zig  rt.zig  runtime.rs  types.zig
std/: list.lam  math.lam  sorting.lam  string.lam
