[package]
name = "lam"
version = "0.3.5"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
inventory = "0.3.24"
include_dir = "0.7.4"
ariadne = { version = "0.6.0", features = ["auto-color"] }
lam-parser = { git = "https://github.com/acctress/lam-parser", version = "0.1.1" }
wasm-bindgen = "0.2.116"